--- a/package.json
+++ b/package.json
@@ -10,11 +10,15 @@
   "author": "Christoffer A Træen",
   "license": "ISC",
   "devDependencies": {
+    "@types/d3": "^5.7.2",
     "html-webpack-plugin": "^4.3.0",
     "ts-loader": "^7.0.5",
     "typescript": "^3.9.5",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.12",
     "webpack-dev-server": "^3.11.0"
+  },
+  "dependencies": {
+    "d3": "^5.16.0"
   }
 }
