--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "webpack",
+    "dev": "webpack --watch --mode=development",
     "build": "webpack"
   },
   "author": "Christoffer A Træen",
