--- a/package.json
+++ b/package.json
@@ -11,7 +11,13 @@
   "license": "ISC",
   "devDependencies": {
     "@types/d3": "^5.7.2",
+    "copy-webpack-plugin": "^6.0.3",
+    "css-loader": "^3.6.0",
     "html-webpack-plugin": "^4.3.0",
+    "mini-css-extract-plugin": "^0.9.0",
+    "sass": "^1.26.9",
+    "sass-loader": "^9.0.1",
+    "style-loader": "^1.2.1",
     "ts-loader": "^7.0.5",
     "typescript": "^3.9.5",
     "webpack": "^4.43.0",
