--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "webpack-dev-server": "^3.11.0"
   },
   "dependencies": {
-    "d3": "^5.16.0"
+    "@types/leaflet": "^1.5.13",
+    "d3": "^5.16.0",
+    "leaflet": "^1.6.0"
   }
 }
