--- a/package.json
+++ b/package.json
@@ -1,32 +1,33 @@
 {
-  "name": "smartcity-kpi",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "dev": "webpack --watch --mode=development",
-    "build": "webpack"
-  },
-  "author": "Christoffer A Træen",
-  "license": "ISC",
-  "devDependencies": {
-    "@types/d3": "^5.7.2",
-    "copy-webpack-plugin": "^6.0.3",
-    "css-loader": "^3.6.0",
-    "html-webpack-plugin": "^4.3.0",
-    "mini-css-extract-plugin": "^0.9.0",
-    "sass": "^1.26.9",
-    "sass-loader": "^9.0.1",
-    "style-loader": "^1.2.1",
-    "ts-loader": "^7.0.5",
-    "typescript": "^3.9.5",
-    "webpack": "^4.43.0",
-    "webpack-cli": "^3.3.12",
-    "webpack-dev-server": "^3.11.0"
-  },
-  "dependencies": {
-    "@types/leaflet": "^1.5.13",
-    "d3": "^5.16.0",
-    "leaflet": "^1.6.0"
-  }
+	"name": "smartcity-kpi",
+	"version": "1.0.0",
+	"description": "",
+	"main": "index.js",
+	"scripts": {
+		"dev": "webpack --watch --mode=development",
+		"build": "webpack",
+		"devserver": "webpack-dev-server"
+	},
+	"author": "Christoffer A Træen",
+	"license": "ISC",
+	"devDependencies": {
+		"@types/d3": "^5.7.2",
+		"copy-webpack-plugin": "^6.0.3",
+		"css-loader": "^3.6.0",
+		"html-webpack-plugin": "^4.3.0",
+		"mini-css-extract-plugin": "^0.9.0",
+		"sass": "^1.26.9",
+		"sass-loader": "^9.0.1",
+		"style-loader": "^1.2.1",
+		"ts-loader": "^7.0.5",
+		"typescript": "^3.9.5",
+		"webpack": "^4.43.0",
+		"webpack-cli": "^3.3.12",
+		"webpack-dev-server": "^3.11.0"
+	},
+	"dependencies": {
+		"@types/leaflet": "^1.5.13",
+		"d3": "^5.16.0",
+		"leaflet": "^1.6.0"
+	}
 }
