--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
 	"description": "",
 	"main": "index.js",
 	"scripts": {
-		"dev": "webpack --watch --mode=development",
-		"build": "webpack",
-		"devserver": "webpack-dev-server"
+		"dev": "NODE_ENV=development webpack --watch --mode=development",
+		"build": "NODE_ENV=production webpack",
+		"devserver": "NODE_ENV=development webpack-dev-server --mode=development"
 	},
 	"author": "Christoffer A Træen",
 	"license": "ISC",
